src/k.h

typedef char *S, C;
typedef unsigned char G;
typedef short H;
typedef int I;
typedef long long J;
typedef float E;
typedef double F;
typedef void V;
typedef unsigned long long UJ;
typedef struct k0 {
  signed char m, a, t;
  C u;
  I r;
  union {
    G g;
    H h;
    I i;
    J j;
    E e;
    F f;
    S s;
    struct k0 *k;
    struct {
      J n;
      G G0[];
    };
  };
} *K;
typedef struct {
  G g[16];
} U;
#define kU(x) ((U *)kG(x))
extern K ku(U), knt(J, K), ktn(I, J), kpn(const S, J);
extern I setm(I), ver();
typedef struct k0 {
  I r;
  H t, u;
  union {
    G g;
    H h;
    I i;
    J j;
    E e;
    F f;
    S s;
    struct k0 *k;
    struct {
      I n;
      G G0[];
    };
  };
} *K;
extern K ktn(I, I), kpn(const S, I);
// #include<string.h>
//  vector accessors, e.g. kF(x)[i] for float&datetime
#define kG(x) ((x)->G0)
#define kC(x) kG(x)
#define kH(x) ((H *)kG(x))
#define kI(x) ((I *)kG(x))
#define kJ(x) ((J *)kG(x))
#define kE(x) ((E *)kG(x))
#define kF(x) ((F *)kG(x))
#define kS(x) ((S *)kG(x))
#define kK(x) ((K *)kG(x))
#define KS 11 // * symbol    char*  kS
extern V m9();
extern V m9(V);
extern J gc(J j);
extern I khpunc(const S, I, const S, I, I), khpun(const S, I, const S, I),
    khpu(const S, I, const S), khp(const S, I), okx(K), ymd(I, I, I), dj(I);
extern V r0(K), sd0(I), sd0x(I d, I f), kclose(I);
extern S sn(const S, I), ss(const S);
extern K ee(K), ktj(I, J), ka(I), kb(I), kg(I), kh(I), ki(I), kj(J), ke(F),
    kf(F), kc(I), ks(const S), kd(I), kz(F), kt(I), sd1(I, K (*)(I)),
    dl(V *f, J), m4(I), knk(I, ...), kp(const S), ja(K *, V *), js(K *, S),
    jk(K *, K), jv(K *k, K), k(I, const S, ...), xT(K), xD(K, K), ktd(K), r1(K),
    krr(const S), orr(const S), dot(K, K), b9(I, K), d9(K), sslInfo(K x),
    vaknk(I, va_list), vak(I, const S, va_list), vi(K, UJ), vk(K);
#define U(x) P(!(x), 0)
#define xx xK[0]
#define xy xK[1]