src/lib.rs

#![allow(non_snake_case)]

pub mod ffi {
    #![allow(non_upper_case_globals)]
    #![allow(non_camel_case_types)]
    #![allow(non_snake_case)]
    #![allow(dead_code)]
    #![allow(unsafe_op_in_unsafe_fn)]

    pub type S = *mut std::os::raw::c_char;
    pub type C = std::os::raw::c_char;
    pub type G = u8;
    pub type H = i16;
    pub type I = i32;
    pub type J = i64;
    pub type E = f32;
    pub type F = f64;
    pub type V = std::os::raw::c_void;
    pub type UJ = u64;

    #[repr(C)]
    #[derive(Copy, Clone, Debug)]
    pub struct U {
        pub g: [G; 16],
    }

    #[repr(C)]
    pub struct k0 {
        pub m: std::os::raw::c_schar,
        pub a: std::os::raw::c_schar,
        pub t: std::os::raw::c_schar,
        pub u: C,
        pub r: I,
        pub union_data: k0_union,
    }

    #[repr(C)]
    pub union k0_union {
        pub g: G,
        pub h: H,
        pub i: I,
        pub j: J,
        pub e: E,
        pub f: F,
        pub s: S,
        pub k: *mut k0,
        pub list: k0_list,
    }

    #[repr(C)]
    #[derive(Copy, Clone)]
    pub struct k0_list {
        pub n: J,
        pub G0: [G; 0],
    }

    pub type K = *mut k0;

    unsafe extern "C" {
        pub fn ku(arg1: U) -> K;
        pub fn knt(arg1: J, arg2: K) -> K;
        pub fn ktn(arg1: I, arg2: J) -> K;
        pub fn kpn(arg1: S, arg2: J) -> K;
        pub fn setm(arg1: I) -> I;
        pub fn ver() -> I;
        pub fn m9();
        pub fn gc(j: J) -> J;
        pub fn khpunc(arg1: S, arg2: I, arg3: S, arg4: I, arg5: I) -> I;
        pub fn khpun(arg1: S, arg2: I, arg3: S, arg4: I) -> I;
        pub fn khpu(arg1: S, arg2: I, arg3: S) -> I;
        pub fn khp(arg1: S, arg2: I) -> I;
        pub fn okx(arg1: K) -> I;
        pub fn ymd(arg1: I, arg2: I, arg3: I) -> I;
        pub fn dj(arg1: I) -> I;
        pub fn r0(arg1: K);
        pub fn sd0(arg1: I);
        pub fn sd0x(d: I, f: I);
        pub fn kclose(arg1: I);
        pub fn sn(arg1: S, arg2: I) -> S;
        pub fn ss(arg1: S) -> S;
        pub fn ee(arg1: K) -> K;
        pub fn ktj(arg1: I, arg2: J) -> K;
        pub fn ka(arg1: I) -> K;
        pub fn kb(arg1: I) -> K;
        pub fn kg(arg1: I) -> K;
        pub fn kh(arg1: I) -> K;
        pub fn ki(arg1: I) -> K;
        pub fn kj(arg1: J) -> K;
        pub fn ke(arg1: F) -> K;
        pub fn kf(arg1: F) -> K;
        pub fn kc(arg1: I) -> K;
        pub fn ks(arg1: S) -> K;
        pub fn kd(arg1: I) -> K;
        pub fn kz(arg1: F) -> K;
        pub fn kt(arg1: I) -> K;
        pub fn sd1(arg1: I, arg2: ::std::option::Option<unsafe extern "C" fn(arg1: I) -> K>) -> K;
        pub fn dl(f: *mut V, arg1: J) -> K;
        pub fn m4(arg1: I) -> K;
        pub fn knk(arg1: I, ...) -> K;
        pub fn kp(arg1: S) -> K;
        pub fn ja(arg1: *mut K, arg2: *mut V) -> K;
        pub fn js(arg1: *mut K, arg2: S) -> K;
        pub fn jk(arg1: *mut K, arg2: K) -> K;
        pub fn jv(k: *mut K, arg1: K) -> K;
        pub fn k(arg1: I, arg2: S, ...) -> K;
        pub fn xT(arg1: K) -> K;
        pub fn xD(arg1: K, arg2: K) -> K;
        pub fn ktd(arg1: K) -> K;
        pub fn r1(arg1: K) -> K;
        pub fn krr(arg1: S) -> K;
        pub fn orr(arg1: S) -> K;
        pub fn dot(arg1: K, arg2: K) -> K;
        pub fn b9(arg1: I, arg2: K) -> K;
        pub fn d9(arg1: K) -> K;
        pub fn sslInfo(x: K) -> K;
        pub fn vaknk(arg1: I, arg2: *mut std::os::raw::c_char) -> K;
        pub fn vak(arg1: I, arg2: S, arg3: *mut std::os::raw::c_char) -> K;
        pub fn vi(arg1: K, arg2: UJ) -> K;
        pub fn vk(arg1: K) -> K;
    }
}

// Safe memory management wrapper (matching original K)
// K is !Send and !Sync by default due to the inner *mut ffi::k0.
// This is intentional — KDB+ objects are not thread-safe and must not cross thread boundaries.
#[repr(transparent)]
pub struct K(*mut ffi::k0);

impl Drop for K {
    fn drop(&mut self) {
        if !self.0.is_null() {
            unsafe {
                ffi::r0(self.0);
            }
        }
    }
}
impl Clone for K {
    fn clone(&self) -> Self {
        if !self.0.is_null() {
            unsafe {
                ffi::r1(self.0);
            }
        }
        K(self.0)
    }
}

impl K {
    #[doc(hidden)]
    pub unsafe fn __from_raw(ptr: *mut ffi::k0) -> Self {
        Self(ptr)
    }

    pub fn as_raw(&self) -> *mut ffi::k0 {
        self.0
    }

    pub fn duplicate(&self) -> K {
        if self.0.is_null() {
            return K::null();
        }
        let t = self.t();
        let n = self.n();
        if t < 0 {
            self.clone()
        } else if t == 0 {
            let res = ktn(0, n);
            let src_slice = self.kK();
            let dest_slice = res.kK();
            for i in 0..(n as usize) {
                dest_slice[i] = src_slice[i].clone();
            }
            res
        } else if t == 99 {
            let keys = self.xx().duplicate();
            let vals = self.xy().duplicate();
            xD(keys, vals)
        } else if t == 98 {
            let dict_ptr = unsafe { (*self.0).union_data.k };
            let dict = std::mem::ManuallyDrop::new(K(dict_ptr));
            let new_dict = dict.duplicate();
            xT(new_dict)
        } else {
            let res = ktn(t, n);
            unsafe {
                let elem_size = match t {
                    1 | 4 | 10 => 1,
                    2 => 16,
                    5 => 2,
                    6 | 13 | 14 | 17 | 18 | 19 => 4,
                    7 | 12 | 15 | 16 => 8,
                    8 => 4,
                    9 => 8,
                    // Type 11 (KS): symbol pointers are interned by q's `ss()`,
                    // so a shallow pointer copy is correct — the intern table owns the strings.
                    11 => std::mem::size_of::<*mut std::os::raw::c_char>(),
                    _ => 1,
                };
                let src_ptr = (*self.0).union_data.list.G0.as_ptr();
                let dest_ptr = (*res.0).union_data.list.G0.as_ptr() as *mut u8;
                std::ptr::copy_nonoverlapping(src_ptr, dest_ptr, (n as usize) * elem_size);
            }
            res
        }
    }

    pub fn make_mut(&mut self) {
        if self.r() > 0 {
            let new_k = self.duplicate();
            *self = new_k;
        }
    }

    pub fn null() -> Self {
        Self(std::ptr::null_mut())
    }

    pub fn into_raw(mut self) -> *mut ffi::k0 {
        let ptr = self.0;
        self.0 = std::ptr::null_mut();
        ptr
    }

    pub fn type_code(&self) -> i8 {
        if self.0.is_null() { 0 } else { unsafe { (*self.0).t } }
    }

    pub fn len(&self) -> usize {
        if self.0.is_null() { 0 } else { unsafe { (*self.0).union_data.list.n as usize } }
    }

    #[inline(always)]
    pub fn t(&self) -> i8 {
        if self.0.is_null() { 0 } else { unsafe { (*self.0).t } }
    }

    #[inline(always)]
    pub fn n(&self) -> i64 {
        if self.0.is_null() { 0 } else { unsafe { (*self.0).union_data.list.n } }
    }

    #[inline(always)]
    pub fn r(&self) -> i32 {
        if self.0.is_null() { 0 } else { unsafe { (*self.0).r } }
    }


    #[inline(always)]
    pub fn g(&self) -> u8 { if self.0.is_null() { 0 } else { unsafe { (*self.0).union_data.g } } }

    #[inline(always)]
    pub fn h(&self) -> i16 { if self.0.is_null() { 0 } else { unsafe { (*self.0).union_data.h } } }

    #[inline(always)]
    pub fn i(&self) -> i32 { if self.0.is_null() { 0 } else { unsafe { (*self.0).union_data.i } } }

    #[inline(always)]
    pub fn j(&self) -> i64 { if self.0.is_null() { 0 } else { unsafe { (*self.0).union_data.j } } }

    #[inline(always)]
    pub fn e(&self) -> f32 { if self.0.is_null() { 0.0 } else { unsafe { (*self.0).union_data.e } } }

    #[inline(always)]
    pub fn f(&self) -> f64 { if self.0.is_null() { 0.0 } else { unsafe { (*self.0).union_data.f } } }

    #[inline(always)]
    pub fn s(&self) -> *mut std::os::raw::c_char { if self.0.is_null() { std::ptr::null_mut() } else { unsafe { (*self.0).union_data.s } } }

    #[inline(always)]
    unsafe fn as_slice_mut_unchecked<T>(&self) -> &mut [T] {
        if self.0.is_null() {
            return &mut [];
        }
        unsafe {
            let ptr = (*self.0).union_data.list.G0.as_ptr() as *mut T;
            let len = (*self.0).union_data.list.n as usize;
            std::slice::from_raw_parts_mut(ptr, len)
        }
    }

    // NOTE: These slice accessors take &self but return &mut [T]. This is a deliberate
    // design trade-off mirroring the C API style (kJ(x)[i] = val). It violates Rust's
    // aliasing model but is safe in practice because KDB+ data access is single-threaded.
    // Callers must not hold two mutable slices to the same K simultaneously.
    #[inline(always)] pub fn kB(&self) -> &mut [i8] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kG(&self) -> &mut [u8] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kH(&self) -> &mut [i16] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kI(&self) -> &mut [i32] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kJ(&self) -> &mut [i64] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kE(&self) -> &mut [f32] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kF(&self) -> &mut [f64] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kC(&self) -> &mut [u8] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kS(&self) -> &mut [*mut std::os::raw::c_char] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kK(&self) -> &mut [K] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn kU(&self) -> &mut [ffi::U] { unsafe { self.as_slice_mut_unchecked() } }
    #[inline(always)] pub fn xx(&self) -> &K { &self.kK()[0] }
    #[inline(always)] pub fn xy(&self) -> &K { &self.kK()[1] }

    /// Returns `true` if the inner pointer is null.
    pub fn is_null(&self) -> bool { self.0.is_null() }

    /// Returns `true` if this K represents a KDB+ error (type -128).
    pub fn is_error(&self) -> bool { self.t() == -128 }
}

impl std::fmt::Debug for K {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        if self.0.is_null() {
            return write!(f, "K(null)");
        }
        let t = self.t();
        match t {
            -128 => {
                let s = self.s();
                let msg = if s.is_null() { "<null>" } else { unsafe { std::ffi::CStr::from_ptr(s).to_str().unwrap_or("<invalid>") } };
                write!(f, "K(error: \"{}\")", msg)
            }
            t if t < 0 => {
                match t {
                    -1  => write!(f, "K(bool: {})", self.g() != 0),
                    -4  => write!(f, "K(byte: {})", self.g()),
                    -5  => write!(f, "K(short: {})", self.h()),
                    -6  => write!(f, "K(int: {})", self.i()),
                    -7  => write!(f, "K(long: {})", self.j()),
                    -8  => write!(f, "K(real: {})", self.e()),
                    -9  => write!(f, "K(float: {})", self.f()),
                    -10 => write!(f, "K(char: {:?})", self.g() as char),
                    -11 => {
                        let s = self.s();
                        let sym = if s.is_null() { "<null>" } else { unsafe { std::ffi::CStr::from_ptr(s).to_str().unwrap_or("<invalid>") } };
                        write!(f, "K(symbol: `{})", sym)
                    }
                    _ => write!(f, "K(atom type={})", t),
                }
            }
            0 => write!(f, "K(mixed list len={})", self.n()),
            98 => write!(f, "K(table)"),
            99 => write!(f, "K(dict)"),
            _ => write!(f, "K(vector type={} len={})", t, self.n()),
        }
    }
}


